agentforce/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Strategic account plan. Sections are drafted by Claude through Prompt Builder, grounded in CRM data and live Snowflake telemetry, then reviewed by the account executive.</description>
    <label>Account Plan</label>
    <nameField><label>Account Plan Name</label><type>Text</type></nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>