agentforce/force-app/main/default/objects/Account_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account this plan belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>