agentforce/force-app/main/default/objects/Account_Plan__c/fields/Account_Vision__c.field-meta.xml
<CustomField>
    <fullName>Account_Vision__c</fullName>
    <description>Where the account can be in 12 months and how to get there.</description>
    <label>Account Vision</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>