agentforce/force-app/main/default/objects/Account_Plan__c/fields/Consumption_Trends__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Trends__c</fullName>
    <description>Drafted from Snowflake telemetry.</description>
    <label>Consumption Trends</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>