agentforce/force-app/main/default/objects/Account_Plan__c/fields/Customer_Landscape__c.field-meta.xml
<CustomField>
    <fullName>Customer_Landscape__c</fullName>
    <description>Stakeholders, opportunities and open issues from CRM.</description>
    <label>Customer Landscape</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>