agentforce/force-app/main/default/objects/Account_Plan__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Plan year, for example FY27.</description>
    <label>Fiscal Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>