agentforce/force-app/main/default/objects/Account_Plan__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>When the last section finished.</description>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>