agentforce/force-app/main/default/objects/Account_Plan__c/fields/Generation_Error__c.field-meta.xml
<CustomField>
    <fullName>Generation_Error__c</fullName>
    <description>Last error, if generation failed.</description>
    <label>Generation Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>