agentforce/force-app/main/default/objects/Account_Plan__c/fields/Generation_Model__c.field-meta.xml
<CustomField>
    <fullName>Generation_Model__c</fullName>
    <description>Model behind the prompt templates.</description>
    <label>Generation Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>