agentforce/force-app/main/default/objects/Account_Plan__c/fields/Grounding_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Snapshot__c</fullName>
    <description>Exact data the sections were drafted from. Kept for review and audit.</description>
    <label>Grounding Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>