agentforce/force-app/main/default/objects/Account_Plan__c/fields/Grounding_Source__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Source__c</fullName>
    <description>Where the telemetry came from: live or cached.</description>
    <label>Grounding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>