agentforce/force-app/main/default/objects/Account_Plan__c/fields/Recommended_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Use_Cases__c</fullName>
    <description>Drafted from Snowflake peer adoption and Cortex Search case studies.</description>
    <label>Recommended Use Cases</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>