agentforce/force-app/main/default/objects/Account_Plan__c/fields/Sections_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sections_Completed__c</fullName>
    <description>How many of the five sections are drafted.</description>
    <label>Sections Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>