agentforce/force-app/main/default/objects/Account_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Queued starts generation. Grounding and Drafting are set by the generator.</description>
    <inlineHelpText>Set to Queued to (re)generate the plan.</inlineHelpText>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Queued</fullName><default>true</default><label>Queued</label></value><value><fullName>Grounding</fullName><default>false</default><label>Grounding</label></value><value><fullName>Drafting</fullName><default>false</default><label>Drafting</label></value><value><fullName>Ready for Review</fullName><default>false</default><label>Ready for Review</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>