agentforce/force-app/main/default/objects/Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Status__c</columns>
    <columns>Sections_Completed__c</columns>
    <columns>Generated_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>